plugins {
    id 'application'
    id 'java'
    id 'com.diffplug.spotless' version '8.7.0'
}

group = 'guru.interlis'
version = '0.1.0'

base {
    archivesName = 'ilitransformer'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven {
        url = uri('https://jars.interlis.ch/')
    }
}

configurations {
    xlsx
    validator
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.1'
    implementation 'ch.interlis:iox-ili:1.24.1'
    implementation 'ch.interlis:ili2c-core:5.6.6'
    implementation 'ch.interlis:ili2c-tool:5.6.6'
    implementation 'info.picocli:picocli:4.7.6'
    implementation 'org.slf4j:slf4j-api:2.0.17'
    runtimeOnly 'org.slf4j:slf4j-simple:2.0.17'

    compileOnly 'org.apache.poi:poi-ooxml:5.4.0'
    xlsx 'org.apache.poi:poi-ooxml:5.4.0'

    validator 'ch.interlis:ilivalidator:1.15.0'

    compileOnly 'ch.interlis:ilivalidator:1.15.0'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'org.assertj:assertj-core:3.25.3'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation 'org.apache.poi:poi-ooxml:5.4.0'
    testImplementation 'ch.interlis:ilivalidator:1.15.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

application {
    mainClass = 'guru.interlis.transformer.app.CliMain'
}

distributions {
    main {
        distributionBaseName = 'ilitransformer'
    }
}

spotless {
    java {
        palantirJavaFormat()
        removeUnusedImports()
        importOrder('static ', 'guru', 'ch', 'java', 'javax', '')
        trimTrailingWhitespace()
        endWithNewline()
    }
    format('misc') {
        target('*.gradle', '*.md', '.gitignore')
        trimTrailingWhitespace()
        leadingTabsToSpaces(4)
        endWithNewline()
    }
}

sourceSets {
    integrationTest {
        java {
            srcDir file('src/integrationTest/java')
        }
        resources {
            srcDir file('src/integrationTest/resources')
        }
        compileClasspath += sourceSets.main.output + sourceSets.test.output + configurations.testRuntimeClasspath
        runtimeClasspath += output + compileClasspath
    }
    realDataTest {
        java {
            srcDir file('src/realDataTest/java')
        }
        resources {
            srcDir file('src/realDataTest/resources')
        }
        compileClasspath += sourceSets.main.output + sourceSets.test.output + configurations.testRuntimeClasspath
        runtimeClasspath += output + compileClasspath
    }
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    systemProperty 'updateFixtures', String.valueOf(
            project.findProperty('updateFixtures')
                    ?: System.getProperty('updateFixtures')
                    ?: 'false')
}

apply from: 'gradle/dm01-dmav-analysis.gradle'
apply from: 'gradle/dm01-dmav-scenarios.gradle'

// -- integrationTest task --------------------------------------------------

tasks.register('integrationTest', Test) {
    description = 'Runs integration tests (in src/integrationTest)'
    group = 'verification'
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    useJUnitPlatform()
}

tasks.register('realDataTest', Test) {
    description = 'Runs real data validation tests (slow, not part of check)'
    group = 'verification'
    testClassesDirs = sourceSets.realDataTest.output.classesDirs
    classpath = sourceSets.realDataTest.runtimeClasspath
    useJUnitPlatform()
}

tasks.register('generateFeatureMatrix', JavaExec) {
    group = 'documentation'
    description = 'Generate feature matrix as Markdown and JSON'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'guru.interlis.transformer.feature.FeatureMatrixTask'
    args = [
        '--markdown', 'build/reports/feature-matrix.md',
        '--json', 'build/reports/feature-matrix.json'
    ]
}

tasks.register('validateFeatureMatrix', Test) {
    description = 'Validates feature matrix: test references exist and are loadable'
    group = 'verification'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform()
    filter {
        includeTestsMatching "guru.interlis.transformer.feature.FeatureMatrixTest"
    }
}

check.dependsOn integrationTest
check.dependsOn validateFeatureMatrix
check.dependsOn spotlessCheck
